--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ css: [landing.css]
     <p>
         Harvest is a Python framework that takes the pain out of setting up an algorithmic trading system from scratch.
     </p>
-    <a href="/tutorials/starter">
+    <a href="{{ '/tutorials/starter' | url }}">
         <button>Startup Guide</button>
     </a>
 </section>
