--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -6,7 +6,7 @@ css: [tutorials.css]
 <section>
 
     <h1>Starters</h1>
-    <a href="/tutorials/starter" class="card col-3 clickable">
+    <a href="{{ '/tutorials/starter' | url }}" class="card col-3 clickable">
        
         <h2>Startup Guide</h2>
         <p>
