deploy: ccc228f57000746d809d2af557c32112dfffe43e

--- a/tutorials/starter/index.html
+++ b/tutorials/starter/index.html
@@ -9,18 +9,18 @@
     <meta property="og:image" content="https://tfukaza.github.io/harvest/logo.png"/>
     <link rel="icon" href="/favicon.ico" />
 
-    <link href="/asset/prism.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.css">
+    <link href="/harvest-website/asset/prism.css" rel="stylesheet">
+    <link href="/harvest-website/css/main.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="/css/tutorial_page.css">
+    <link href="/harvest-website/css/tutorial_page.css" rel="stylesheet" ">
     
 </head>
 <body> 
      <nav>
-    <a id="logo" href="/" ></a>
+    <a id="logo" href="/harvest-website/" ></a>
     <ul>
-        <li><a href="/tutorials">Tutorials</a></li>
-        <li><a href="/docs">Docs</a></li>
+        <li><a href="/harvest-website/tutorials">Tutorials</a></li>
+        <li><a href="/harvest-website/docs">Docs</a></li>
     </ul>
     <a id="github" href="https://github.com/tfukaza/harvest"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" /></a>
 </nav>
