--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <meta property="og:image" content="https://tfukaza.github.io/harvest/logo.png"/>
     <link rel="icon" href="/favicon.ico" />
 
-    <link href="/asset/prism.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.css">
+    <link href="/harvest-website/asset/prism.css" rel="stylesheet">
+    <link href="/harvest-website/css/main.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="/css/landing.css">
+    <link href="/harvest-website/css/landing.css" rel="stylesheet" ">
     
 </head>
 <body> 
      <nav>
-    <a id="logo" href="/" ></a>
+    <a id="logo" href="/harvest-website/" ></a>
     <ul>
-        <li><a href="/tutorials">Tutorials</a></li>
-        <li><a href="/docs">Docs</a></li>
+        <li><a href="/harvest-website/tutorials">Tutorials</a></li>
+        <li><a href="/harvest-website/docs">Docs</a></li>
     </ul>
     <a id="github" href="https://github.com/tfukaza/harvest"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" /></a>
 </nav>
@@ -32,7 +32,7 @@
     <p>
         Harvest is a Python framework that takes the pain out of setting up an algorithmic trading system from scratch.
     </p>
-    <a href="/tutorials/starter">
+    <a href="/harvest-website/tutorials/starter">
         <button>Startup Guide</button>
     </a>
 </section>
