--- a/tutorials/starter/index.html
+++ b/tutorials/starter/index.html
@@ -179,5 +179,5 @@ if __name__ == &quot;__main__&quot;:
     </div>
   </div>
 </footer>
-    <script src="/asset/prism.js"></script>
+    <script src="/harvest-website/asset/prism.js"></script>
 </body>
