--- a/index.html
+++ b/index.html
@@ -74,5 +74,5 @@
     </div>
   </div>
 </footer>
-    <script src="/asset/prism.js"></script>
+    <script src="/harvest-website/asset/prism.js"></script>
 </body>
