--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -62,5 +62,5 @@
     </div>
   </div>
 </footer>
-    <script src="/asset/prism.js"></script>
+    <script src="/harvest-website/asset/prism.js"></script>
 </body>
