added documentation for the cli

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -13,6 +13,13 @@ css: [tutorials.css]
         Introduction to installing Harvest, and writing your first algorithm.
         </p>
     </a>
+    <a href="{{ '/tutorials/cli' | url }}" class="card col-3 clickable">
+       
+        <h2>Harvest CLI</h2>
+        <p>
+        How to use the Harvest CLI.
+        </p>
+    </a>
     <div class="card col-3 nonclickable">
       
         <h2>Backtesting</h2>
