Improved mobile version

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ css: [landing.css]
             <div class="yellow"></div>
             <div class="green"></div>
         </div>
+        <div class="code-content">
         <code>
             <pre>
 class Watch(BaseAlgo):
@@ -91,12 +92,13 @@ class Watch(BaseAlgo):
         elif self.crossover(sma_short, sma_long):
             self.sell()</span>
             </pre>
-            <div class="line-numbers">
-                {% for i in (1..14) %}
+            
+        </code>
+      </div>  <div class="line-numbers">
+                {% for i in (1..20) %}
                 <span class="number"></span>
                 {% endfor %}
             </div>
-        </code>
     </div>
     <!-- <div class="shadow-dark" id="try-shell">
         <div class="code-header">
