deploy: c7be18fd51ee514c0f2a3760dfba4669e4a6ae5d

--- a/README/index.html
+++ b/README/index.html
@@ -1,5 +1,5 @@
 <h1>harvest-website</h1>
-<p>Website for harvest-python</p>
+<p>Website for harvest-python: https://tfukaza.github.io/harvest-website/</p>
 <h2>Development</h2>
 <p>To start dev server:</p>
 <pre><code>npm run start
