deploy: cc40572e43af404bd4c2c3508dd53d31e4297707

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -24,7 +24,7 @@
     </py-env> -->
 </head>
 <body> 
-     <nav class="z-10 lg:absolute navbar shadow-sm bg-base-100">
+     <nav class="z-10 navbar shadow-sm bg-base-100 fixed">
     <div>
         <div class="navbar-start flex items-center">
             <a id="logo" class="w-20 lg:w-28" href="/harvest-website/" >       
